# symlink-rs

./: CHANGELOG  COPYRIGHT  Cargo.toml  README.md  appveyor.yml
src/: lib.rs
src/windows/: c.rs
