[package]
name = "symlink-rs"
description = "Create symlinks in a cross-platform manner"
authors = [
    "Josiah Parry <josiah@ricochet.rs>",
    "Chris Morgan <rust@chrismorgan.info>",
]
license = "BlueOak-1.0.0 OR MIT OR Apache-2.0"
version = "1.0.0"
readme = "README.md"
keywords = ["file", "fs"]
categories = ["filesystem"]
repository = "https://github.com/symlink-rs"
